# homelab

./: .gitignore  README.md  azure.txt
.github/workflows/: Create-Release-On-Push.yml  master_bitcoincountdown.yml
Ansible/: README.md
Ansible/vm-setup/: ansible.cfg  inventory.ini  readme.md  setup-ubuntu-24-04.yml
Cloudformation/simple-setup/: MyKeyPair.pem  parent-stack.yaml  readme.md  stack.yaml  vpc-template.yaml
Docker/: README.md
Docker/CentOS7/: CentOS7-Docker-Install-Only.sh  Centos7-Docker-Install-Script-Long.sh  Centos7-Docker-Install-Script.sh  RancherOS_Commands.txt  build.tf.txt
Docker/WindowsApps/: Dockerfile  Dockerfile-Install-Now  Install-TinyTest.ps1  readme.md  testinst.nsi
Docker/WindowsServer2016/: 50GB_EDRIVE_VDISK.txt  50GB_EDrive.ps1  Install-VHD-Cmdlets.txt  Readme.txt  Windows-Server-2016-Docker-Installer.ps1  tips.md
Docker/WineDotNet48/: Dockerfile  README.md  install-dotnet.sh  verify-dotnet.sh
Project/ExchangeLiquidityCountdown/: Dockerfile  hello.py  main.py  pyproject.toml  readme.md  requirements.txt
Project/MSTR-API/: btc-api.py  btc-charts.py  btc-price.py  btc_200_day_closing_average.py  btc_200_day_closing_average_graph.py  hello.py  mstr-api-polygon.py  mstr-api.py  mstr-checker.py  pyproject.toml  readme.md  reduce-to-per-day.py  reduce-to-per-hour.py
Tailscale/: Tailscale-Operator-Nginx-Example.yml
Taskfile/Azure/: .env.ib  .env.rootisgod  .env.testing  Taskfile.yaml  aaa.tfvars  bbb.tfvars  (+4 more)
packer/: README.md
terraform/: Download-All-Terraform-Binaries-Linux.ps1  DownloadAllTerraformExes.ps1  README.md
(+401 files in other folders)
